# checkIT

./: .gitignore  Cargo.toml  README.md  build.rs  org.checkit.CheckIT.yml  org.rdyards.CheckIT.yml  resources.gresource.xml
.github/workflows/: release.yaml
data/: APPLICATION_ID  app.desktop.in  app.service.in  gschemas.compiled  org.gtk_rs.CheckIT.gschema.xml  resources.gresource  resources.gresource.xml
data/resources/: style.css  window.ui
data/resources/ui/: ledger.ui  new_ledger.ui  placeholder.ui  window.ui
docs/: FAQ.md
docs/Components/: ADW.md  GTK.md  Secure Ledger (sl).md
docs/Dev/: Compile to .deb.md  Compile to .rpm.md  Compile to MacOS.md  Guide.md  Make Flatpak.md  Run workflows locally.md
docs/User Manual/: Core Concepts.md  KeyBinds.md  Roadmap.md  Welcome.md
docs/User Manual/Entries/: Add.md  Remove an Entry.md  Remove.md  Search Entries.md  Share.md
docs/User Manual/Ledger/: Clone.md  Create.md  Import.md  Remove.md  Save As.md  Save.md  Share.md
ledgers/: TST1.json
resources/: ledger_banner.ui  org.gtk_rs.CheckIT.gschema.xml.gschema.xml  resources.gresource  style.css  window.ui
src/: actions.rs  app.rs  ledger.rs  ledger_db.rs  main.rs  page.rs  ui.rs
src/components/: ledger_banner.rs  mod.rs
src/data/: data_model.rs  ledger.rs  ledger_db.rs  mod.rs
src/p2p/: messenger.rs  mod.rs  share_dialog.rs
src/ui/: page.rs
