[package]
name = "checkit"
version = "0.0.5"
edition = "2024"

[dependencies]
gtk = { version = "0.11.1", package = "gtk4", features = ["v4_16"] }
adw = { version = "0.9.1", package = "libadwaita", features = ["v1_8"] }
glib = "0.22.3"
sl = {git = "https://github.com/rdYards/sl.git"}
tokio = { version = "1.51.1", features = ["sync","rt"] }   

[build-dependencies]
glib-build-tools = "0.22.0"
