[package]
name = "checkit"
version = "0.0.6"
edition = "2024"

[dependencies]
gtk = { version = "0.11.1", package = "gtk4", features = ["v4_16"] }
adw = { version = "0.9.1", package = "libadwaita", features = ["v1_8"] }
glib = "0.22.3"
sl = {git = "https://github.com/rdYards/sl.git"}
tokio = { version = "1.52.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.1.3", features = ["alloc"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
aes-gcm = "0.10.3"
getrandom = "0.4.2"
local-ip-address = "0.6.11"
gethostname = "1.1.0"

[build-dependencies]
glib-build-tools = "0.22.0"
